feat: containerize full-stack application and implement JWT security configuration